# crossbill

./: README.md  setup.cfg
chamber/: README.md  UMO_chamber-Mold_20_30_withbase.stl  UMO_clip-ID32clip.stl  chamber.blend  clip.blend
crossbill-mini/: CrossbillMiniPrime.json  Crossbill_mini.py  README.md  crossbill-mini.py  crossbill.qrc  crossbillUI.py  crossbill_rc.py  daq.py  stage.py
crossbillmini/: README.md
rpi-pico-crossbill/: README.md  rpi-pico-crossbill.ino
src/crossbill/: daq.py  stage.py
