[metadata]
name = crossbill-mini
version = 0.0.1
author = Manish Kumar
author_email = manish.kumar@northwestern.edu
description = A GUI to assist imaging with Crossbill microscope
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/optomanishk/crossbill
project_urls =
    Bug Tracker = https://github.com/optomanishk/crossbill/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    mcculw 
    pyqt 
    qtpy
    qdarkstyle
    
[options.packages.find]
where = src
