[metadata]
name = crossbill-t1
version = 0.0.1
author = Manish Kumar
author_email = manish.kumar@northwestern.edu
description = A GUI to assist imaging with the Crossbill microscope
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/optomanishk/crossbill
project_urls =
    Bug Tracker = https://github.com/optomanishk/crossbill/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

# package requirements
install_requires =
    mcculw
    numpy    
    pyqt5
    qtpy
    qdarkstyle
    emoji
    
[options.packages.find]
where = src
